--- a/TakeBackChatter/en.lproj/MainMenu.xib
+++ b/TakeBackChatter/en.lproj/MainMenu.xib
@@ -1336,23 +1336,23 @@
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSScrollView" id="724786978">
+						<object class="NSScrollView" id="924085197">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">274</int>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<object class="NSClipView" id="516530570">
-									<reference key="NSNextResponder" ref="724786978"/>
+								<object class="NSClipView" id="1046909839">
+									<reference key="NSNextResponder" ref="924085197"/>
 									<int key="NSvFlags">2304</int>
 									<object class="NSMutableArray" key="NSSubviews">
 										<bool key="EncodedWithXMLCoder">YES</bool>
-										<object class="NSCollectionView" id="210034682">
-											<reference key="NSNextResponder" ref="516530570"/>
+										<object class="NSCollectionView" id="984699239">
+											<reference key="NSNextResponder" ref="1046909839"/>
 											<int key="NSvFlags">274</int>
 											<string key="NSFrameSize">{416, 605}</string>
-											<reference key="NSSuperview" ref="516530570"/>
+											<reference key="NSSuperview" ref="1046909839"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="591377506"/>
+											<reference key="NSNextKeyView" ref="507176809"/>
 											<string key="NSMinGridSize">{0, 0}</string>
 											<string key="NSMaxGridSize">{0, 0}</string>
 											<int key="NSMaxNumberOfGridRows">0</int>
@@ -1363,12 +1363,12 @@
 													<int key="NSColorSpace">6</int>
 													<string key="NSCatalogName">System</string>
 													<string key="NSColorName">controlBackgroundColor</string>
-													<object class="NSColor" key="NSColor" id="463260255">
+													<object class="NSColor" key="NSColor" id="452255373">
 														<int key="NSColorSpace">3</int>
 														<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
 													</object>
 												</object>
-												<object class="NSColor" id="788453872">
+												<object class="NSColor" id="36985834">
 													<int key="NSColorSpace">6</int>
 													<string key="NSCatalogName">System</string>
 													<string key="NSColorName">gridColor</string>
@@ -1383,39 +1383,39 @@
 										</object>
 									</object>
 									<string key="NSFrame">{{1, 1}, {416, 605}}</string>
-									<reference key="NSSuperview" ref="724786978"/>
+									<reference key="NSSuperview" ref="924085197"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="210034682"/>
-									<reference key="NSDocView" ref="210034682"/>
+									<reference key="NSNextKeyView" ref="984699239"/>
+									<reference key="NSDocView" ref="984699239"/>
 									<object class="NSColor" key="NSBGColor">
 										<int key="NSColorSpace">6</int>
 										<string key="NSCatalogName">System</string>
 										<string key="NSColorName">controlColor</string>
-										<reference key="NSColor" ref="463260255"/>
+										<reference key="NSColor" ref="452255373"/>
 									</object>
 									<int key="NScvFlags">4</int>
 								</object>
-								<object class="NSScroller" id="591377506">
-									<reference key="NSNextResponder" ref="724786978"/>
+								<object class="NSScroller" id="507176809">
+									<reference key="NSNextResponder" ref="924085197"/>
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{234, 1}, {15, 143}}</string>
-									<reference key="NSSuperview" ref="724786978"/>
+									<reference key="NSSuperview" ref="924085197"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="938681155"/>
-									<reference key="NSTarget" ref="724786978"/>
+									<reference key="NSNextKeyView" ref="681642928"/>
+									<reference key="NSTarget" ref="924085197"/>
 									<string key="NSAction">_doScroller:</string>
 									<double key="NSCurValue">1</double>
 									<double key="NSPercent">0.89655172824859619</double>
 								</object>
-								<object class="NSScroller" id="938681155">
-									<reference key="NSNextResponder" ref="724786978"/>
+								<object class="NSScroller" id="681642928">
+									<reference key="NSNextResponder" ref="924085197"/>
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 144}, {233, 15}}</string>
-									<reference key="NSSuperview" ref="724786978"/>
+									<reference key="NSSuperview" ref="924085197"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="422902943"/>
+									<reference key="NSNextKeyView" ref="58777500"/>
 									<int key="NSsFlags">1</int>
-									<reference key="NSTarget" ref="724786978"/>
+									<reference key="NSTarget" ref="924085197"/>
 									<string key="NSAction">_doScroller:</string>
 									<double key="NSPercent">0.63157892227172852</double>
 								</object>
@@ -1423,13 +1423,13 @@
 							<string key="NSFrame">{{20, 69}, {418, 607}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="516530570"/>
+							<reference key="NSNextKeyView" ref="1046909839"/>
 							<int key="NSsFlags">562</int>
-							<reference key="NSVScroller" ref="591377506"/>
-							<reference key="NSHScroller" ref="938681155"/>
-							<reference key="NSContentView" ref="516530570"/>
+							<reference key="NSVScroller" ref="507176809"/>
+							<reference key="NSHScroller" ref="681642928"/>
+							<reference key="NSContentView" ref="1046909839"/>
 						</object>
-						<object class="NSButton" id="422902943">
+						<object class="NSButton" id="58777500">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">289</int>
 							<string key="NSFrame">{{332, 39}, {106, 23}}</string>
@@ -1437,7 +1437,7 @@
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSButtonCell" key="NSCell" id="878430534">
+							<object class="NSButtonCell" key="NSCell" id="825229037">
 								<int key="NSCellFlags">-2080244224</int>
 								<int key="NSCellFlags2">134217728</int>
 								<string key="NSContents">Login</string>
@@ -1446,7 +1446,7 @@
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">1044</int>
 								</object>
-								<reference key="NSControlView" ref="422902943"/>
+								<reference key="NSControlView" ref="58777500"/>
 								<int key="NSButtonFlags">-2033434369</int>
 								<int key="NSButtonFlags2">162</int>
 								<string key="NSAlternateContents"/>
@@ -1459,9 +1459,9 @@
 					<string key="NSFrame">{{7, 11}, {458, 696}}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
-					<reference key="NSNextKeyView" ref="724786978"/>
+					<reference key="NSNextKeyView" ref="924085197"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
+				<string key="NSScreenRect">{{0, 0}, {2560, 1578}}</string>
 				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
 			<object class="NSCustomObject" id="976324537">
@@ -1470,8 +1470,8 @@
 			<object class="NSCustomObject" id="755631768">
 				<string key="NSClassName">NSFontManager</string>
 			</object>
-			<object class="NSCollectionViewItem" id="952018268"/>
-			<object class="NSView" id="905136540">
+			<object class="NSCollectionViewItem" id="438287736"/>
+			<object class="NSView" id="857442349">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">256</int>
 				<string key="NSFrameSize">{100, 100}</string>
@@ -1479,7 +1479,7 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView"/>
 			</object>
-			<object class="NSArrayController" id="55951570">
+			<object class="NSArrayController" id="842138308">
 				<bool key="NSEditable">YES</bool>
 				<object class="_NSManagedProxy" key="_NSManagedProxy"/>
 				<bool key="NSAvoidsEmptySelection">YES</bool>
@@ -1487,6 +1487,9 @@
 				<bool key="NSSelectsInsertedObjects">YES</bool>
 				<bool key="NSFilterRestrictsInsertion">YES</bool>
 				<bool key="NSClearsFilterPredicateOnInsertion">YES</bool>
+			</object>
+			<object class="NSCustomObject" id="697517498">
+				<string key="NSClassName">FeedController</string>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -2175,16 +2178,16 @@
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">itemPrototype</string>
-						<reference key="source" ref="210034682"/>
-						<reference key="destination" ref="952018268"/>
+						<reference key="source" ref="984699239"/>
+						<reference key="destination" ref="438287736"/>
 					</object>
 					<int key="connectionID">539</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">view</string>
-						<reference key="source" ref="952018268"/>
-						<reference key="destination" ref="905136540"/>
+						<reference key="source" ref="438287736"/>
+						<reference key="destination" ref="857442349"/>
 					</object>
 					<int key="connectionID">540</int>
 				</object>
@@ -2192,34 +2195,18 @@
 					<object class="IBActionConnection" key="connection">
 						<string key="label">startLogin:</string>
 						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="422902943"/>
+						<reference key="destination" ref="58777500"/>
 					</object>
 					<int key="connectionID">543</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">contentArray: feedItems</string>
-						<reference key="source" ref="55951570"/>
-						<reference key="destination" ref="976324537"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="55951570"/>
-							<reference key="NSDestination" ref="976324537"/>
-							<string key="NSLabel">contentArray: feedItems</string>
-							<string key="NSBinding">contentArray</string>
-							<string key="NSKeyPath">feedItems</string>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">547</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
 						<string key="label">content: arrangedObjects</string>
-						<reference key="source" ref="210034682"/>
-						<reference key="destination" ref="55951570"/>
+						<reference key="source" ref="984699239"/>
+						<reference key="destination" ref="842138308"/>
 						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="210034682"/>
-							<reference key="NSDestination" ref="55951570"/>
+							<reference key="NSSource" ref="984699239"/>
+							<reference key="NSDestination" ref="842138308"/>
 							<string key="NSLabel">content: arrangedObjects</string>
 							<string key="NSBinding">content</string>
 							<string key="NSKeyPath">arrangedObjects</string>
@@ -2227,6 +2214,30 @@
 						</object>
 					</object>
 					<int key="connectionID">549</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">feedController</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="697517498"/>
+					</object>
+					<int key="connectionID">551</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">contentArray: feedItems</string>
+						<reference key="source" ref="842138308"/>
+						<reference key="destination" ref="697517498"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="842138308"/>
+							<reference key="NSDestination" ref="697517498"/>
+							<string key="NSLabel">contentArray: feedItems</string>
+							<string key="NSBinding">contentArray</string>
+							<string key="NSKeyPath">feedItems</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">553</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -2783,8 +2794,8 @@
 						<reference key="object" ref="439893737"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="724786978"/>
-							<reference ref="422902943"/>
+							<reference ref="924085197"/>
+							<reference ref="58777500"/>
 						</object>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3276,58 +3287,65 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">533</int>
-						<reference key="object" ref="724786978"/>
+						<reference key="object" ref="924085197"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="591377506"/>
-							<reference ref="938681155"/>
-							<reference ref="210034682"/>
+							<reference ref="507176809"/>
+							<reference ref="681642928"/>
+							<reference ref="984699239"/>
 						</object>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">534</int>
-						<reference key="object" ref="591377506"/>
-						<reference key="parent" ref="724786978"/>
+						<reference key="object" ref="507176809"/>
+						<reference key="parent" ref="924085197"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">535</int>
-						<reference key="object" ref="938681155"/>
-						<reference key="parent" ref="724786978"/>
+						<reference key="object" ref="681642928"/>
+						<reference key="parent" ref="924085197"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">536</int>
-						<reference key="object" ref="210034682"/>
-						<reference key="parent" ref="724786978"/>
+						<reference key="object" ref="984699239"/>
+						<reference key="parent" ref="924085197"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">537</int>
-						<reference key="object" ref="952018268"/>
+						<reference key="object" ref="438287736"/>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">538</int>
-						<reference key="object" ref="905136540"/>
+						<reference key="object" ref="857442349"/>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">541</int>
-						<reference key="object" ref="422902943"/>
+						<reference key="object" ref="58777500"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="878430534"/>
+							<reference ref="825229037"/>
 						</object>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">542</int>
-						<reference key="object" ref="878430534"/>
-						<reference key="parent" ref="422902943"/>
+						<reference key="object" ref="825229037"/>
+						<reference key="parent" ref="58777500"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">544</int>
-						<reference key="object" ref="55951570"/>
+						<reference key="object" ref="842138308"/>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">Feed Array Controller</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">550</int>
+						<reference key="object" ref="697517498"/>
+						<reference key="parent" ref="0"/>
+						<string key="objectName">Feed Controller</string>
 					</object>
 				</object>
 			</object>
@@ -3562,6 +3580,7 @@
 					<string>541.IBPluginDependency</string>
 					<string>542.IBPluginDependency</string>
 					<string>544.IBPluginDependency</string>
+					<string>550.IBPluginDependency</string>
 					<string>56.IBPluginDependency</string>
 					<string>56.ImportedFromIB2</string>
 					<string>57.IBEditorWindowLastContentRect</string>
@@ -3821,7 +3840,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<reference ref="788453872"/>
+					<reference ref="36985834"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3874,11 +3894,19 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">549</int>
+			<int key="maxID">553</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">FeedController</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FeedController.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">NSDocument</string>
 					<object class="NSMutableDictionary" key="actions">
@@ -3950,14 +3978,35 @@
 					<string key="className">TakeBackChatterAppDelegate</string>
 					<string key="superclassName">NSObject</string>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">window</string>
-						<string key="NS.object.0">NSWindow</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>feedController</string>
+							<string>window</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>FeedController</string>
+							<string>NSWindow</string>
+						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">window</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">window</string>
-							<string key="candidateClassName">NSWindow</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>feedController</string>
+							<string>window</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">feedController</string>
+								<string key="candidateClassName">FeedController</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">window</string>
+								<string key="candidateClassName">NSWindow</string>
+							</object>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
